web/styles/padula.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : Oct 2, 2016, 10:17:13 PM
    Author     : Alexis
*/
html{
    font-family: Tahoma, Geneva, sans-serif;
}

.mobile{
    display: none;
}

body{
    margin:0 15% 10% 15%;
}

h1{
    text-align: center;
    text-transform: uppercase;
}

header p{
    text-align:center;
}

h2{
    font-size:100%;
    text-decoration: underline;
    text-transform: uppercase;
}

#Elon{
    font-weight: bold;
}

.date{
    display:inline;
    float:right;
    font-weight:normal;
}

.jobtitle{
    font-style: italic;
}

.city{
    font-weight:normal
}
 
h3, h2{
    margin: 0;
}

p{
    line-height:0;
    margin-top: 1%;
}

ul{
    margin: 0 -.20em 0 -.2em
}

h3{
    font-size: 90%;
}

div{
    margin-top: 2%;
}

#mock{
   color:red;
}

#degree{
    font-style:italic;
}

section{
    margin-bottom: 1.5em;
}

@viewport{
    width: 972px;
    zoom:1;
}

@media  only screen and (max-width:500px){
    .mobile{
        visibility:visible;
    }
    
    .large, .date{
        display:none;
    }
    
    p{
        margin-top: 3%;
    }
    
}

